Fix spacing en firefox

--- a/web/app/sass/logo.scss
+++ b/web/app/sass/logo.scss
@@ -32,6 +32,7 @@ $logo-height: 20em;
       width: $legend-width;
       margin-left: -$legend-width/2;
       #legend {
+        letter-spacing: 0;
         font-size: 2.2em;
         white-space: nowrap;
       }
@@ -41,10 +42,13 @@ $logo-height: 20em;
 
 @keyframes legend-animation {
   0% {
-    letter-spacing: 5em;
+    letter-spacing: 3em;
     opacity: 0;
-    -webkit-filter: blur(10px);
-    filter: blur(10px);
+    $blur: 10px;
+    -webkit-filter: blur($blur);
+    -moz-filter: blur($blur);
+    -o-filter: blur($blur);
+    filter: blur($blur);
   }
   25% {
     opacity: 1;
@@ -54,6 +58,8 @@ $logo-height: 20em;
   }
   100% {
     -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
     filter: blur(0px);
   }
 }
@@ -66,7 +72,6 @@ $legend-animation-delay: 0ms;
 $legend-animation-timing: ease-out;
 $legend-animation-name: legend-animation;
 
-
 #legend {
   -o-animation-iteration-count: $animation-iteration;
   -moz-animation-iteration-count: $animation-iteration;
@@ -77,7 +82,7 @@ $legend-animation-name: legend-animation;
   -moz-animation-fill-mode: $animation-fill;
   -o-animation-fill-mode: $animation-fill;
   animation-fill-mode: $animation-fill;
-    
+
   -o-animation-duration: $legend-animation-duration;
   -moz-animation-duration: $legend-animation-duration;
   -webkit-animation-duration: $legend-animation-duration;
@@ -97,5 +102,4 @@ $legend-animation-name: legend-animation;
   -moz-animation-delay: $legend-animation-delay;
   -webkit-animation-delay: $legend-animation-delay;
   animation-delay: $legend-animation-delay;
-
 }
