--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -70,14 +70,17 @@ body {
       width: 200em;
       margin-left: -100em; }
       #logo-container #logo #legend-container #legend {
+        letter-spacing: 0;
         font-size: 2.2em;
         white-space: nowrap; }
 
 @keyframes legend-animation {
   0% {
-    letter-spacing: 5em;
+    letter-spacing: 3em;
     opacity: 0;
     -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
     filter: blur(10px); }
   25% {
     opacity: 1; }
@@ -85,6 +88,8 @@ body {
     letter-spacing: 0; }
   100% {
     -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
     filter: blur(0px); } }
 #legend {
   -o-animation-iteration-count: 1;
